tests/uat/errors/duplicate_name.rq
rq get_users("http://localhost:8080/users");

rq get_users("http://localhost:8080/users/all");
